--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html> 
-<html> 
+<html lang="sv> 
 <head> 
 
-    <title>Exempel 1 navigation bar</title> 
+    <title>Pictures JavaScript</title> 
 
     <meta charset = "utf-8" /> 
 
@@ -18,7 +18,7 @@
 
     <header class="header"> 
 
-        <h1></h1> 
+        <h1>Pictures</h1> 
 
     </header> 
 
