--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> 
-<html lang="sv> 
+<html lang="sv"> 
 <head> 
 
     <title>Pictures JavaScript</title> 
@@ -39,11 +39,11 @@
     </header> 
     
     <div class="div-content">
-        <img class="mySlides" src="img/crowd.jpg" style="width: 100%">
-        <img class="mySlides" src="img/fancy.jpg" style="width: 100%">
-        <img class="mySlides" src="img/lights.jpg" style="width: 100%">
-        <img class="mySlides" src="img/mic.jpg" style="width: 100%">
-        <img class="mySlides" src="img/spark.jpg" style="width: 100%">
+        <img class="mySlides" src="img/crowd.jpg" alt="a" style="width: 100%">
+        <img class="mySlides" src="img/fancy.jpg" alt="b" style="width: 100%">
+        <img class="mySlides" src="img/lights.jpg" alt="c" style="width: 100%">
+        <img class="mySlides" src="img/mic.jpg" alt="d" style="width: 100%">
+        <img class="mySlides" src="img/spark.jpg" alt="e" style="width: 100%">
     <button class="slider-button display-left"
 onclick="changeImage(-1)">&#129076;</button>
     <button class="slider-button display-right"
@@ -113,7 +113,7 @@ onclick="changeImage(1)">&#129078;</button>
 
       </p> 
 
-      <p><img src="img/andreas.jpg" height="300" width="201" alt="Foto" /> 
+      <p> 
 
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a augue id 
 
