--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <header class="mainmenu"> 
 
-        <ul> 
+        <ul class="topnav"> 
 
             <li><a href="home.html">Hem</a></li> 
 
