--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
         <ul class="topnav"> 
 
-            <li><a href="home.html">Hem</a></li> 
+            <li><a href="https://www.youtube.com/watch?v=nK24dsK6nco">Hem</a></li> 
 
-            <li><a href="news.html">Nyheter</a></li> 
+            <li><a href="https://www.youtube.com/watch?v=k1kmM8SUwyg">Nyheter</a></li> 
 
-            <li><a href="contacts.html">kontakt</a></li> 
+            <li><a href="https://www.youtube.com/watch?v=5_GMVA_leqc">Kontakt</a></li> 
 
-            <li><a href="about.html">Om</a></li> 
+            <li><a href="https://www.youtube.com/watch?v=AJZukAVGYTY">Om</a></li> 
 
         </ul> 
 
