--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </div>
 
 <!-- Use any element to open/show the overlay navigation menu -->
-<span onclick="openNav()">open</span>
+<span onclick="openNav()"><button>open<button/></span>
     
     </header> 
     
