--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@ onclick="changeImage(1)">&#129078;</button>
     </footer> 
 
     </div><!--wrapper slutar--> 
-
+    
+<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    
   </body> 
 
 </html> 
